[package]
name = "p2p_trading"
version = "0.1.0"
description = "Peer to peer spl-token/sol trading program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "p2p_trading"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.22.1", features = ["init-if-needed"] }
anchor-spl = "0.22.1"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
solana-program = "1.9.2"
mpl-token-metadata = { version = "1.2.5", features = [ "no-entrypoint" ] }
